objects/VisitOps__Presenter_Survey__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Agenda_Survey__c</fullName>
        <label>Agenda Survey</label>
        <referenceTo>VisitOps__Agenda_Survey__c</referenceTo>
        <relationshipLabel>Presenter Survey</relationshipLabel>
        <relationshipName>Presenter_Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expectations_Met__c</fullName>
        <inlineHelpText>Did the speaker(s) meet your expectations?</inlineHelpText>
        <label>Expectations Met?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Somewhat</fullName>
                </value>
                <value>
                    <fullName>Not really</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Agenda_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter Agenda Link</label>
        <referenceTo>VisitOps__Presenter_Agenda_Link__c</referenceTo>
        <relationshipLabel>Presenter Survey</relationshipLabel>
        <relationshipName>Presenter_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Name__c</fullName>
        <formula>IF( OR(VisitOps__Presenter_Agenda_Link__r.VisitOps__Presenter__c != null,VisitOps__Presenter_Agenda_Link__r.VisitOps__Presenter__c != &apos;&apos;), VisitOps__Presenter_Agenda_Link__r.VisitOps__Presenter__r.VisitOps__Presenter_Name__c, if( OR(VisitOps__Presenter_Agenda_Link__r.VisitOps__User__c != null,VisitOps__Presenter_Agenda_Link__r.VisitOps__User__c != &apos;&apos;),VisitOps__Presenter_Agenda_Link__r.VisitOps__User__r.FirstName +&apos; &apos;+ VisitOps__Presenter_Agenda_Link__r.VisitOps__User__r.LastName,&apos;&apos;))</formula>
        <label>Presenter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Rating__c</fullName>
        <label>Presenter Satisfaction Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>VisitOps__Presenter__c</referenceTo>
        <relationshipLabel>Presenter Survey</relationshipLabel>
        <relationshipName>Presenter_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Speaker_Rating__c</fullName>
        <label>Speaker Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Presenter Survey</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Presenter__c</columns>
        <columns>VisitOps__Agenda_Survey__c</columns>
        <columns>VisitOps__Expectations_Met__c</columns>
        <columns>VisitOps__Presenter_Rating__c</columns>
        <columns>VisitOps__Speaker_Rating__c</columns>
        <columns>VisitOps__Presenter_Agenda_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS{0000}</displayFormat>
        <label>Presenter Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presenter Survey</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>